--- a/src/Components/NavBar/SearchBar/SearchBar.css
+++ b/src/Components/NavBar/SearchBar/SearchBar.css
@@ -1,34 +1,38 @@
 .search-container {
-    position: relative;
-    width: 40px;
-    height: 40px;
-    border-radius: 4px;
-    background-color: white;
-    border: 2px solid black;
-    transition: width 0.3s, border-radius 0.3s;
-  }
+  position: relative;
+  width: 40px;
+  height: 40px;
+  border-radius: 4px;
+  background-color: white;
+  border: 2px solid black;
+  transition: width 0.3s, border-radius 0.3s;
+}
+
+.search-container.expanded {
+  width: 200px;
+  border-radius: 0 4px 4px 0;
+  background-position: center right;
+}
+
+.search-input {
+  background-image: url("src/Components/NavBar/Assets/search.svg");
+  background-repeat: no-repeat;
+  background-position: right ;
   
-  .search-container.expanded {
-    width: 300px;
-    border-radius: 0 4px 4px 0;
-  }
-  
-  .search-input {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 40px;
-    border: none;
-    outline: none;
-    padding: 0 10px;
-    box-sizing: border-box;
-    font-size: 16px;
-    transition: width 0.3s, padding 0.3s;
-  }
-  
-  .search-container.expanded .search-input {
-    width: 100%;
-    padding: 0 10px;
-  }
-  
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 8%;
+  height: 40px;
+  border: none;
+  outline: none;
+  padding: 0 10px 0 22px;
+  box-sizing: border-box;
+  font-size: 16px;
+  transition: width 0.3s, padding 0.3s;
+}
+
+.search-container.expanded .search-input {
+  width: 100%;
+  padding: 0 23px 0 10px;
+}
