--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,8 +1,6 @@
 .hero-section{
     position: relative;
     margin-top: 0;
-    /* height: 480px;
-    width: 100%; */
 }
 
 .hero-info{
@@ -14,20 +12,98 @@
     position: absolute;
     z-index: -1;
     top: 0;
-    height: 1400px;
+
+    height: 780px;
 }
 
 .hero-img > img {
-    /* overflow: hidden; */
     position: absolute;
     width: 100vw; /* sets the width to 100% of the viewport width */
-    height: 50%; /* sets the height to 100% of the parent div height */
+    height: 100%; /* sets the height to 100% of the parent div height */
     object-fit: cover; /* scales the image to cover the entire element */
-    /* top: 0; */
+    top: 0;
     left: 0;
 }
 
 
 .hero-content{
-    /* margin-top: 0; */
+    color: white;
+    margin-left: 170px;
 }
+
+.hero-content h3{
+    margin-top: 80px;
+}
+
+.hero-content-down{
+    margin-top: 250px;
+}
+
+.hero-content-down h1{
+    color: black;
+    font-size: 60px;
+    margin-top: 20px;
+    margin-bottom: 0;
+    line-height: 90%;
+}
+
+.hero-content-down h5{
+    margin-bottom: 0;
+    font-size: 20px;
+}
+
+.hero-content-down p{
+    margin-top: 0;
+    font-size: 20px;
+}
+
+.hero-content-btn {
+    display: flex;
+    gap: 25px;
+    padding: 10px 20px;
+    position: relative;
+    z-index: 1;
+  }
+  
+  .hero-content-btn button {
+    height: 40px;
+    width: 150px;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-family: 'Syne', sans-serif;
+    cursor: pointer;
+    font-weight: 700;
+    background-color: black;
+    position: relative;
+    z-index: 2;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    /* box-shadow: 2px 2px 0 #000; */
+  }
+  
+  .hero-content-btn button:hover {
+    transform: translate(2px, 2px);
+    /* box-shadow: 4px 4px 0 #000; */
+  }
+
+  .hero-content-btn button::before {
+    content: "";
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    right: -2px;
+    bottom: -2px;
+    z-index: -1;
+    border: 2px solid #fff;
+    border-radius: 4px;
+    opacity: 0;
+    transition: transform 0.3s ease, opacity 0.3s ease;
+  }
+  
+  .hero-content-btn button ::before {
+    transform: translate(10px, 10px);
+    opacity: 1;
+  }
+  
+  
+  
