--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
 
   /* color-scheme: light dark; */
   color: black;
-  background-color: gray;
+  background-color: white;
 
 }
 
@@ -19,4 +19,5 @@ a:hover {
 body {
   margin: 0;
   padding: 0;
+  /* overflow: hidden; */
 }
