--- a/src/Components/Checkout-Card/Checkout.css
+++ b/src/Components/Checkout-Card/Checkout.css
@@ -7,23 +7,27 @@
     font-family: 'Syne', sans-serif;
     cursor: pointer;
     font-weight: 700;
-    background-color: rgb(224, 221, 221);
+    background-color: rgb(255, 255, 255);
     position: relative;
-    /* border: 2px solid #000000; */
-    /* box-shadow: inset 0 0 0 2px #ccc; */
+    border: 2px solid #000000;
     display: flex;
-    justify-content: center;
+    justify-content:center;
     align-items: center; 
+   
 } 
-  
+ 
+.checkout img{
+    height: 20px;
+    width: 20px;
+}
   
 .checkout::before {
     content: "";
     position: absolute;
     top: 6px;
     left: 6px;
-    right: -6px;
-    bottom: -6px;
+    right: -8px;
+    bottom: -8px;
     z-index: -3;
     border: 2px solid #b6b6b6;
     border-radius: 4px;
