--- a/src/Components/Checkout-Card/CheckBoxItems.css
+++ b/src/Components/Checkout-Card/CheckBoxItems.css
@@ -1,15 +1,59 @@
+
+  
+
+
+  
+/* .toppings-list {
+    list-style: none;
+    padding: 0;
+} */
+  
+
+.toppings-list li {
+    margin-bottom: 0.5rem;
+    margin-top: 0.5rem;
+}
+  
+.toppings-list-item {
+    display: flex;
+    justify-content: space-between;
+    padding-right: 2px;
+}
+  
+
+  
+.toppings-list-item label {
+    vertical-align: text-bottom;
+    margin-left: 0.2rem;
+}
+  
+.total {
+    margin-top: 1rem;
+}
+
+
 .checkout-container{
     position: absolute;
     left: 180px;
 }
 
+
 .checkout-box-header{
     display: flex;
+    justify-content: center;
+    margin-top: 12px;
+    margin-bottom: 12px;
+    gap: 5px;
+}
+
+.checkout-box-header h4{
+    margin: 0;
 }
 
 .checkout-box-header img{
     height: 20px;
     width: 20px;
+    cursor: pointer;
 }
 
 .checkout {
@@ -50,23 +94,16 @@
     transition: transform 0.3s ease, opacity 0.3s ease;
 }
   
-  .checkout:hover::before {
+.checkout:hover::before {
     transform: translate(3px, 3px);
-  }
+}
   
-  .menu {
-    position: absolute;
-    /* width: 200px; */
-    height: 0;
-    /* overflow: hidden; */
-    background-color: white;
-    transition: height 0.3s;
+  
+@media screen and (max-width: 600px) {
+    .toppings-list,
+    .total {
+      width: 90%;
+    }
 }
 
-.menu.open {
-    top: -380%;
-    right: -30%;
-    height: 200px; /* set a height for the div */
-    overflow-y: scroll; /* add a vertical scrollbar */
-  }
-  
+
