--- a/src/Components/Checkout-Card/CheckoutCard.css
+++ b/src/Components/Checkout-Card/CheckoutCard.css
@@ -1,14 +1,14 @@
 
-.menu {
+.checkout-menu {
     position: absolute;
     /* width: 200px; */
     height: 0;
-    /* overflow: hidden; */
+    overflow: hidden;
     background-color: white;
-    transition: height 0.3s;
+    transition: height -0.3s;
 }
 
-.menu.open {
+.checkout-menu.open {
     top: -380%;
     right: -30%;
     height: 200px;
@@ -17,19 +17,19 @@
     scrollbar-color: #888 #f1f1f1; /* color of the thumb and track */
 }
   
-.menu.open::-webkit-scrollbar {
+.checkout-menu.open::-webkit-scrollbar {
     width: 5px; /* width of the scrollbar */
 }
   
-.menu.open::-webkit-scrollbar-thumb {
+.checkout-menu.open::-webkit-scrollbar-thumb {
     background-color: #888; /* color of the thumb */
 }
   
-.menu.open::-webkit-scrollbar-thumb:hover {
+.checkout-menu.open::-webkit-scrollbar-thumb:hover {
     background-color: #555; /* color of the thumb on hover */
 }
   
-.menu.open::-webkit-scrollbar-track {
+.checkout-menu.open::-webkit-scrollbar-track {
     background-color: #f1f1f1; /* color of the track */
 }
   
