--- a/src/Components/Grids/Grid.css
+++ b/src/Components/Grids/Grid.css
@@ -139,6 +139,7 @@
     padding: 1rem;
     border-bottom-right-radius: 4px;
     border-bottom-left-radius: 4px;
+    
   }
   /* reduces the top margin on the h2, bottom on the p, and leaves a 0.5rem gap between the two */
   figcaption * {
@@ -152,11 +153,12 @@
   }
   /* sets a specific background color for each div */
   .one {
-    background-image: url('src/Components/Grids/Asset/wears/golf-red-tee.jpg');
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100%;
+    height: 72%;
   }
-  .two {
+  /* .two {
     background-image: url('src/Components/Grids/Asset/wears/women-shoe.jpg');
     background-size: cover;
     background-repeat: no-repeat;
@@ -171,4 +173,4 @@
     background-size: cover;
     background-repeat: no-repeat;
   }
-  
+   */
